# kicad-templates

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  lockdown.yml
1593K_Enclosure/: 1593K_Enclosure.sch
Adafruit_Feather/: Adafruit_Feather-cache.lib  Adafruit_Feather.kicad_pcb  Adafruit_Feather.sch
Adafruit_Feather/meta/: info.html
Arduino_As_Uno_R3/: Arduino_As_Uno-cache.lib  Arduino_As_Uno.pro
Arduino_Fio/: Arduino_Fio.sch
Arduino_Micro/: Arduino_Micro-cache.lib  Arduino_Micro.sch  fp-lib-table
Arduino_Mini/: Arduino_Mini-cache.lib  Arduino_Mini.sch
Arduino_Nano/: Arduino_Nano.sch
Arduino_Pro_Mini/: Arduino_Pro_Mini.pro  Arduino_Pro_Mini.sch
Arduino_Uno_R3/: Arduino_Uno.sch  fp-lib-table
BeagleBone-Black-Cape/: BeagleBone-Black-Cape.sch  fp-lib-table  pwr_BeagleBone.lib
EuroCard160mmX100mm/: EuroCard160mmX100mm.sch
EuroCard160mmX100mm_holes/: EuroCard160mmX100mm_holes-cache.lib
HSMC_Card/: HSMC_Card-cache.lib  HSMC_Card.kicad_pcb  HSMC_Card.pro  HSMC_Card.sch
HSMC_Card/meta/: info.html
Hammond_1591XXL/meta/: info.html
Hammond_1593K_Enclosure/: Hammond_1593K_Enclosure.kicad_pcb
ISO5457/: ISO5457_A2.kicad_wks  ISO5457_A2_comp.kicad_wks  ISO5457_A2_comp_rev.kicad_wks  ISO5457_A2_rev.kicad_wks  ISO5457_A3.kicad_wks  ISO5457_A3_comp.kicad_wks  ISO5457_A3_comp_rev.kicad_wks  ISO5457_A3_rev.kicad_wks  ISO5457_A4.kicad_wks  ISO5457_A4_comp.kicad_wks  ISO5457_A4_comp_portrait.kicad_wks  ISO5457_A4_comp_rev.kicad_wks  ISO5457_A4_comp_rev_portrait.kicad_wks  ISO5457_A4_portrait.kicad_wks  ISO5457_A4_rev.kicad_wks  ISO5457_A4_rev_portrait.kicad_wks
Projects/Arduino_Fio/: Arduino_Fio-cache.lib  Arduino_Fio.pro  fp-lib-table
Projects/Arduino_Mega_R3/: Arduino_Mega-cache.lib  Arduino_Mega.sch
Projects/Arduino_Micro/: Arduino_Micro.pro
Projects/Arduino_Mini/: Arduino_Mini.pro
Projects/Arduino_Nano/: Arduino_Nano-cache.lib  Arduino_Nano.pro
Projects/Arduino_Pro_Mini/: Arduino_Pro_Mini-cache.lib
Projects/BeagleBone-Black-Cape/: BeagleBone-Black-Cape-cache.lib  BeagleBone-Black-Cape.pro
Projects/EuroCard160mmX100mm/: EuroCard160mmX100mm.kicad_pcb  (+1 more)
Worksheets/: A2_ISO5457-1999_ISO7200-2004-compact_ASMEY1435-2014_EN.kicad_wks  A2_ISO5457-1999_ISO7200-2004-compact_EN.kicad_wks  A2_ISO5457-1999_ISO7200-2004_EN.kicad_wks  A2_ISO5457_ISO7200.kicad_wks  A2_ISO5457_ISO7200_ASMEY1435M.kicad_wks  A2_ISO5457_ISO7200comp.kicad_wks  A2_ISO5457_ISO7200comp_ASMEY1435M.kicad_wks  A3_ISO5457-1999_ISO7200-2004-compact_ASMEY1435-2014_EN.kicad_wks  A3_ISO5457-1999_ISO7200-2004-compact_DE.kicad_wks  A3_ISO5457-1999_ISO7200-2004-compact_EN.kicad_wks  A3_ISO5457-1999_ISO7200-2004_ASMEY1435-2014_EN.kicad_wks  A3_ISO5457_ISO7200.kicad_wks  A3_ISO5457_ISO7200_ASMEY1435M.kicad_wks  A3_ISO5457_ISO7200comp.kicad_wks  A3_ISO5457_ISO7200comp_ASMEY1435M.kicad_wks  A4-portrait_ISO5457-1999_ISO7200-2004-compact_DE.kicad_wks  A4-portrait_ISO5457-1999_ISO7200-2004-compact_EN.kicad_wks  A4-portrait_ISO5457-1999_ISO7200-2004_ASMEY1435-2014_EN.kicad_wks  A4_ISO5457-1999_ISO7200-2004-compact_EN.kicad_wks  A4_ISO5457-1999_ISO7200-2004_ASMEY1435-2014_EN.kicad_wks  A4_ISO5457_ISO7200.kicad_wks  A4_ISO5457_ISO7200_ASMEY1435M.kicad_wks  A4_ISO5457_ISO7200_ASMEY1435M_portrait.kicad_wks  A4_ISO5457_ISO7200_portrait.kicad_wks  A4_ISO5457_ISO7200comp.kicad_wks  A4_ISO5457_ISO7200comp_ASMEY1435M.kicad_wks  A4_ISO5457_ISO7200comp_ASMEY1435M_portrait.kicad_wks  A4_ISO5457_ISO7200comp_portrait.kicad_wks  ISO5457_A2_comp.kicad_wks  ISO5457_A2_comp_rev.kicad_wks  ISO5457_A2_rev.kicad_wks  ISO5457_A3_rev.kicad_wks  ISO5457_A4.kicad_wks  ISO5457_A4_comp.kicad_wks  ISO5457_A4_comp_portrait.kicad_wks  ISO5457_A4_comp_rev.kicad_wks  ISO5457_A4_comp_rev_portrait.kicad_wks  ISO5457_A4_rev.kicad_wks  ISO5457_A4_rev_portrait.kicad_wks  gost_landscape.kicad_wks  (+1 more)
minnowboard-ls-lure/: minnowboard-ls-lure-cache.lib  minnowboard-ls-lure.pro
orange-pi-zero-plus2-hat/: orange-pi-zero-plus2-hat.kicad_pcb  orange-pi-zero-plus2-hat.pro  orange-pi-zero-plus2-hat.sch
raspberrypi-gpio/: raspberrypi-gpio-cache.lib  raspberrypi-gpio.pro  raspberrypi-gpio.sch
raspberrypi-gpio-40pin/: raspberrypi-gpio-40pin.kicad_pcb  raspberrypi-gpio-40pin.pro
raspberrypi_hat/: raspberrypi_hat.kicad_pcb  raspberrypi_hat.pro  raspberrypi_hat.sch  sym-lib-table
stm32f100-discovery-shield/: stm32f100-discovery-shield-cache.lib  stm32f100-discovery-shield.kicad_pcb  stm32f100-discovery-shield.pro  stm32f100-discovery-shield.sch
ti-stellaris-boosterpack40_min/: boosterpack40_min-cache.lib  boosterpack40_min.kicad_pcb  boosterpack40_min.pro  boosterpack40_min.sch
(+54 files in other folders)
